--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "jetifier": "^1.6.6",
     "native-base": "^2.12.1",
     "react": "16.8.3",
     "react-native": "0.59.9",
